<resources>
    <string name="app_name">V2 Admin</string>
    <string name="mobile_number">mobile number</string>
    <string name="password">password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="daily_orders">Daily Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_profile">My Profile</string>
    <string name="my_groups">My Groups</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_cart">My Cart</string>
    <string name="cancel">Clear Changes</string>
    <string name="save">Place Orders</string>
    <string name="update_orders">Update Orders</string>
    <string name="report">Order Reports</string>
    <string name="confirm_reject">Confirm/Reject Orders</string>
    <string name="search_groups">Join Groups</string>
    <string name="deliver_orders">Deliver Orders</string>
    <string name="pending_payments">Payments</string>

    <string-array name="time_slots">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>

    <string-array name="country_codes">
        <item>+91</item>
        <item>+61</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assign_delivery">Assign Delivery</string>
    <string name="freeze_availabilities">Availabilities</string>
    <string name="send_notifications">"Send Notifications"</string>

</resources>
