<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/contactUsFragment"
        android:icon="@drawable/contact_us_icon"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/report_icon"
        android:title="@string/report" />
    <item
        android:id="@+id/paymentFragment"
        android:title="@string/pending_payments" />
    <item
        android:id="@+id/deliverFragment"
        android:title="@string/deliver_orders" />
    <item
        android:id="@+id/confirmRejectFragment"
        android:title="@string/confirm_reject" />
    <item
        android:id="@+id/assignDeliveryFragment"
        android:title="Assign Delivery" />
    <item
        android:id="@+id/freezeMultipleFragment"
        android:title="Freeze Availabilities" />
</menu>